@@ -16,18 +16,24 @@ import static org.eclipse.ditto.base.model.common.ConditionChecker.checkNotNull;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
 import javax.annotation.concurrent.Immutable;
 
 import org.eclipse.ditto.base.model.auth.AuthorizationSubject;
-import org.eclipse.ditto.base.model.signals.commands.exceptions.GatewayJwtIssuerNotSupportedException;
+import org.eclipse.ditto.gateway.api.GatewayJwtIssuerNotSupportedException;
+import org.eclipse.ditto.gateway.service.util.config.DittoGatewayConfig;
+import org.eclipse.ditto.gateway.service.util.config.security.OAuthConfig;
+import org.eclipse.ditto.internal.utils.config.DefaultScopedConfig;
 import org.eclipse.ditto.jwt.model.JsonWebToken;
 import org.eclipse.ditto.placeholders.ExpressionResolver;
 import org.eclipse.ditto.placeholders.PipelineElement;
 import org.eclipse.ditto.placeholders.PlaceholderFactory;
 import org.eclipse.ditto.policies.model.SubjectId;
+
+import com.typesafe.config.Config;
+
+import akka.actor.ActorSystem;
 
 /**
  * Implementation of {@link JwtAuthorizationSubjectsProvider} for Google JWTs.
@@ -37,18 +43,35 @@ public final class DittoJwtAuthorizationSubjectsProvider implements JwtAuthoriza
 
     private final JwtSubjectIssuersConfig jwtSubjectIssuersConfig;
 
+    @SuppressWarnings("unused") //Loaded via reflection by AkkaExtension.
+    public DittoJwtAuthorizationSubjectsProvider(final ActorSystem actorSystem, final Config extensionConfig) {
+        this(jwtSubjectIssuersConfig(actorSystem));
+    }
+
     private DittoJwtAuthorizationSubjectsProvider(final JwtSubjectIssuersConfig jwtSubjectIssuersConfig) {
-        this.jwtSubjectIssuersConfig = jwtSubjectIssuersConfig;
+        this.jwtSubjectIssuersConfig = checkNotNull(jwtSubjectIssuersConfig);
+    }
+
+    private static JwtSubjectIssuersConfig jwtSubjectIssuersConfig(final ActorSystem actorSystem) {
+        final DefaultScopedConfig dittoScoped = DefaultScopedConfig.dittoScoped(actorSystem.settings().config());
+        final OAuthConfig oAuthConfig = DittoGatewayConfig.of(dittoScoped)
+                .getAuthenticationConfig()
+                .getOAuthConfig();
+        return JwtSubjectIssuersConfig.fromOAuthConfig(oAuthConfig);
     }
 
     /**
      * Returns a new {@code DittoAuthorizationSubjectsProvider}.
      *
+     * @param actorSystem the actorSystem in which the provider should exist.
      * @param jwtSubjectIssuersConfig the subject issuer configuration.
      * @return the DittoAuthorizationSubjectsProvider.
      * @throws NullPointerException if any argument is {@code null}.
      */
-    public static DittoJwtAuthorizationSubjectsProvider of(final JwtSubjectIssuersConfig jwtSubjectIssuersConfig) {
+    public static DittoJwtAuthorizationSubjectsProvider of(final ActorSystem actorSystem,
+            final JwtSubjectIssuersConfig jwtSubjectIssuersConfig) {
+
+        checkNotNull(actorSystem);
         checkNotNull(jwtSubjectIssuersConfig);
         return new DittoJwtAuthorizationSubjectsProvider(jwtSubjectIssuersConfig);
     }
@@ -69,7 +92,7 @@ public final class DittoJwtAuthorizationSubjectsProvider implements JwtAuthoriza
                 .flatMap(PipelineElement::toStream)
                 .map(subject -> SubjectId.newInstance(jwtSubjectIssuerConfig.getSubjectIssuer(), subject))
                 .map(AuthorizationSubject::newInstance)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
